--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "electron": "^16.0.2"
   },
   "dependencies": {
-    "@electron/remote": "^2.0.1"
+    "@electron/remote": "^2.0.1",
+    "buckets-js": "^1.98.2"
   }
 }
